--- a/assets/scss/libs/vars.scss
+++ b/assets/scss/libs/vars.scss
@@ -1,16 +1,16 @@
 // Font-size 
-$ftsz1: 2.4em;
-$ftsz2: 2em;
-$ftsz3: 1.8em;
-$ftsz4: 1.6em;
-$ftsz5: 1.4em;
-$ftsz6: 1.2em;
-$ftsz7: 1.1em;
-$ftsz8: 1em;
-$ftsz9: .9em;
-$ftsz10: .8em;
-$ftsz11: .7em;
-$ftsz12: .5em;
+$ftsz1: 3rem;
+$ftsz2: 2.4rem;
+$ftsz3: 2.1rem;
+$ftsz4: 1.8rem;
+$ftsz5: 1.6rem;
+$ftsz6: 1.4rem;
+$ftsz7: 1.2rem;
+$ftsz8: 1.1rem;
+$ftsz9: 1rem;
+$ftsz10: .9rem;
+$ftsz11: .8rem;
+$ftsz12: .6rem;
  
 // Colors 
 // https://design-milk.com/color-palettes-inspired-hayao-miyazakis-films/
