--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -39,27 +39,27 @@ p {
 
 
 h1{
-    margin: 2.2rem 0rem 1.6rem 0rem;
+    margin: 2.4rem 0rem 1.8rem 0rem;
     font-size: $ftsz2;
 }
 h2 {
-    margin: 1.8rem 0rem 1.2rem 0rem;
+    margin: 2rem 0rem 1.4rem 0rem;
     font-size: $ftsz3;
 }
 h3 {
-    margin: 1.6rem 0rem 1.1em 0rem;
+    margin: 1.8rem 0rem 1.2em 0rem;
     font-size: $ftsz4;
 }
 h4 {
-    margin: 1.4rem 0vh 1rem 0rem;
+    margin: 1.5rem 0vh 1.1em 0rem;
     font-size: $ftsz5;
 }
 h5 {
-    margin: 1.2rem 0vh .8rem 0rem;
+    margin: 1.2rem 0vh 1rem 0rem;
     font-size: $ftsz6;
 }
 h6 {
-    margin: 1rem 0vh .6rem 0rem;
+    margin: 1rem 0vh .9rem 0rem;
     font-size: $ftsz7;
 }
 
@@ -87,10 +87,6 @@ mark {
     background-color: $seco4;
 }
 
-i, ai {
-    padding-left: .25rem;
-    padding-right: .25rem;
-}
 
 kbd {
     font-family: "Fira Code", monospace;;
