--- a/assets/scss/libs/main-content.scss
+++ b/assets/scss/libs/main-content.scss
@@ -95,7 +95,7 @@
     }
 
     .article-meta, .article-main, .listings {
-        padding: 4px 18px 6px 24px;
+        padding: 1% 3% 1% 3%;
     }
      
     .footnotes {
