--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
   <div class="article-meta">
-    <h1 id="title"> Error 404 <i class='far fa-angry'></i> </h1>
+    <i class='far fa-angry'></i> <h1 id="title"> Error 404 <i class='far fa-angry'></i> </h1>
 
     <h2> Sorry but the page you're looking for does not exist!</h2>
   </div>
