--- a/assets/scss/libs/main-content.scss
+++ b/assets/scss/libs/main-content.scss
@@ -13,8 +13,8 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        min-height: 84vh;
-        padding: 0px;
+        min-height: 88vh;
+        padding: 0rem;
     }
 }
 
@@ -91,15 +91,15 @@
                 }
             }
         } 
-        margin-bottom: 1rem;
+        margin-bottom: .8rem;
     }
 
     .article-meta, .article-main, .listings {
-        padding: 1% 3% 1% 3%;
+        padding: .2% 3% .2% 3%;
     }
      
     .footnotes {
-        margin-top: 3rem;
+        margin-top: 2.8rem;
         font-size: $ftsz9;
         p {
             font-size: $ftsz9;
