--- a/assets/scss/libs/sidebar-primary.scss
+++ b/assets/scss/libs/sidebar-primary.scss
@@ -82,9 +82,13 @@
         }
     }
     h2 {
-        font-size: $ftsz3;
+        margin-top: 1.4rem;
+        margin-bottom: 1rem;
+        font-size: $ftsz4;
     }
     h3 {
+        margin-top: .8rem;
+        margin-bottom: 1rem;
         font-size: $ftsz6;
         padding-left: 1rem;
     }
