--- a/assets/scss/libs/sidebar-primary.scss
+++ b/assets/scss/libs/sidebar-primary.scss
@@ -53,29 +53,17 @@
         font-size: $ftsz6;
         padding-left: 1rem;
     }
-    i, ai {
-        color: $prim5;
-    }
-    a {
-        color: inherit;
-        text-decoration: none;
-        color: $prim5;
-        &:hover {
-            color: $thir4;
-        }
+
+    h1, h2, h3 {
         i, ai {
-            text-decoration: inherit;
-            text-decoration-color: inherit;
-            color: inherit;
-            &:hover {
-                color: inherit;
-            }
+            color: $prim5;
         }
     }
+   
     button {
         font: inherit;
         background-color: inherit;
-        color: $thir4;
+        color: $prim1;
         border: 0px;
         padding: inherit;  
     }
@@ -86,9 +74,6 @@
             &:hover {
                 color: $prim5;
             }
-        }
-        i, ai {
-            color: $prim5;
         }
     }
     .dropdown {
@@ -129,19 +114,5 @@
     }
 }
 
-
-.footer  {
-    padding: 5vh .5rem .5rem .8rem;
-    font-size: $ftsz7;
-    @media #{$small-low} {
-        display: none;
-    }
-    #hr-footer {
-        width: 40%;
-        color: transparent;
-        height: 2px;
-        background-color: $seco4;
-    }
-}
 
 
