--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,10 +1,10 @@
 {{ define "main" }}
 
   <div class="article-meta">
-    <i class='far fa-angry'></i> <h1 id="title"> Error 404 <i class='far fa-angry'></i> </h1>
+     <h1 id="title"> <i class='far fa-angry'></i> Error 404 <i class='far fa-angry'></i> </h1>
 
     <h2> Sorry but the page you're looking for does not exist!</h2>
   </div>
 
- 
+
 {{ end }}
