--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="{{ $styles.Permalink }}" media="screen">
    {{ end }}
 
-
   {{ range .Site.Params.custom_css }}
     <link rel="stylesheet" href="{{ "/css/" | relURL }}{{ . }}">
   {{ end }}
@@ -28,18 +27,31 @@
       {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
   {{ end -}}
 
-  <!-- og tags -->
-  <!-- https://github.com/onedrawingperday/hugo-test/blob/master/themes/1drawing/layouts/partials/head.html -->
-  {{ if .IsPage }}
-      <meta property="og:type" content="article">
-      <meta property="og:title" content="{{ .Site.Title }}"/>
-      <meta property="article:published_time" content="{{ .Date.Format "2006-01-02" }}">
-  {{ else }}
-      <meta property="og:type" content="website">
-      <meta property="og:title" content="{{ .Site.Title }}"/>
-      <meta property="og:description" content="{{ .Site.Params.description }}"/>
+
+  <!-- META -->
+  {{ with .Site.Params.authorname }}
+    <meta name="author" content="{{ . }}" />
   {{ end }}
+  {{ with .Site.Params.organization }}
+    <meta name="institution" content="{{ . }}" />
+  {{ end }}
+  {{ with .Params.tags }}
+    <meta name="news_keywords" content="{{ . }}"/>
+   {{ end }}
+
+   <!-- OG -->
+   <meta property="og:site_name" content="{{ .Site.Title }}"/>
+   {{ if .IsPage }}
+     {{ with .Title }}
+     <meta property="og:title" content="{{ . }}"/>
+     {{ end }}
+     {{ with .Params.descriptionOG }}
+      <meta property="og:description" content="{{ . }}">
+     {{ end }}
+   {{ end }}
 
 
+   <!-- custom HEAD -->
+   {{ partial "head_custom.html" . }}
 
  </head>
