--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -89,8 +89,8 @@ a {
     margin: 0rem;
 }
 
-img, iframe, video { 
-    max-width: 100%; 
+img, iframe, video {
+    max-width: 100%;
     margin: .4rem 0rem .4rem 0rem;
 }
 
@@ -103,7 +103,7 @@ img, iframe, video {
     code {
         font-family: "Fira Code", monospace;
         color: $prim3;
-    }  
+    }
 }
 
 blockquote {
@@ -143,7 +143,7 @@ kbd {
     }
 }
 
-li code, p code { 
+li code, p code {
     font-family: 'Fira Code', monospace;
     font-size: .92em;
     color: $prim3;
@@ -179,11 +179,13 @@ li code, p code {
 /* Table */
 table {
   margin: auto;
-  border-top: 4px solid $prim2;
-  border-bottom: 4px solid $prim2;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border-top: 3px solid $prim2;
+  border-bottom: 3px solid $prim2;
 }
-th, td { 
-    padding: .3rem; 
+th, td {
+    padding: .2rem;
 }
 thead, tfoot {
     background: $seco4;
@@ -191,8 +193,8 @@ thead, tfoot {
 th {
     border-bottom: 2px solid $prim2;
 }
-tr:nth-child(even) { 
-    background: $thir5; 
+tr:nth-child(even) {
+    background: $thir5;
 }
 
 
@@ -234,7 +236,7 @@ tr:nth-child(even) {
         height: 2px;
         background-color: $seco4;
     }
-    
+
 }
 
 .footer2 {
