--- a/layouts/partials/media-social-banner.html
+++ b/layouts/partials/media-social-banner.html
@@ -20,7 +20,7 @@
 <a href="https://www.facebook.com/public/{{ . }}"><i class='fab fa-facebook-square'></i></a>
 {{ end }}
 {{ with .Site.Params.instagram }}
-<a href="https://www.instagram.com/{{ . }}"><i class='fab fab fa-instagram'></i></a>
+<a href="https://www.instagram.com/{{ . }}"><i class='fab fa-instagram'></i></a>
 {{ end }}
 {{ with .Site.Params.pinterest }}
 <a href="https://www.pinterest.com/{{ . }}"><i class='fab fa-pinterest-square'></i></a>
