--- a/assets/scss/libs/main-content.scss
+++ b/assets/scss/libs/main-content.scss
@@ -1,14 +1,17 @@
 .ctn-main-content {
-    width: 65%;
+    width: 55%;
     display: flex;
     flex-flow: row wrap;
     background-color: $seco5;
+
     @media #{$large-low} {
-        width: 60%;
+        width: 55%;
     }
+
     @media #{$medium-low} {
         width: 70%;
     }
+
     @media #{$small-low} {
         width: 100%;
         display: flex;
@@ -23,14 +26,17 @@
     margin-bottom: 2vh;
     font-size: $ftsz7;
     color: $prim2;
+    padding-left: 0.5rem;
+    padding-right: 0.75rem;
 
     @media #{$small-low} {
-        flex: 1 0 auto; 
+        flex: 1 0 auto;
     }
 
     a {
         color: $thir4;
         text-decoration: none;
+
         &:hover {
             color: $prim5
         }
@@ -40,29 +46,36 @@
     .listings {
         font-weight: 400;
         color: $prim2;
+
         .date {
             color: $prim1;
             font-size: $ftsz10;
             padding-left: .3rem;
         }
+
         ol li {
             font-size: $ftsz7;
             padding: .1rem;
-          }
+        }
+
         ol li::marker {
             font-family: "AMA";
             font-size: $ftsz7;
             color: $prim3;
         }
+
         ul {
             list-style-type: none;
         }
+
         a {
             color: $prim2;
             text-decoration: none;
+
             &:hover {
                 color: $prim5;
             }
+
             font-weight: 500;
         }
     }
@@ -71,36 +84,45 @@
         #title h1 {
             margin: 1.2rem 0rem 1.2rem 0rem;
         }
+
         text-align: center;
+
         .tags {
             margin-top: .8rem;
             font-size: $ftsz9;
             color: $prim2;
-            kbd {                                              
+
+            kbd {
                 background-color: $prim2;
                 color: $prim5;
                 padding: .4rem;
                 border-radius: .6rem;
                 border: 0rem;
             }
+
             a {
                 text-decoration: none;
+
                 &:hover {
                     text-decoration: underline;
                     text-decoration-color: $prim5;
                 }
             }
-        } 
+        }
+
         margin-bottom: .8rem;
     }
 
-    .article-meta, .article-main, .listings {
+    .article-meta,
+    .article-main,
+    .listings {
         padding: 0% 3.2% 1% 3.2%;
     }
-     
+
     .footnotes {
         margin-top: 2.8rem;
         font-size: $ftsz9;
+
         p {
             font-size: $ftsz9;
         }
