--- a/assets/scss/libs/sidebar-primary.scss
+++ b/assets/scss/libs/sidebar-primary.scss
@@ -1,6 +1,11 @@
 .ctn-sidebar-primary {
     display: flex;
+    position: -webkit-sticky;
+    position: sticky;
+    align-self: flex-start;
+    top: 0px;
     flex-flow: row wrap;
+
     width: 20%;
     background-color: $prim2;
     min-height: 100vh;
@@ -33,20 +38,24 @@
             margin: 1rem 0rem 1rem 0rem;
             font-size: $ftsz1;
         }
+
         .primary-sidebar-menu {
             display: none;
         }
     }
+
     h1 {
         font-family: "AMA";
         margin-bottom: 1.2rem;
         padding-top: .4rem;
     }
+
     h2 {
         margin-top: 1.4rem;
         margin-bottom: 1rem;
         font-size: $ftsz4;
     }
+
     h3 {
         margin-top: .8rem;
         margin-bottom: 1rem;
@@ -54,58 +63,77 @@
         padding-left: 1rem;
     }
 
-    h1, h2, h3 {
-        i, ai {
+    h1,
+    h2,
+    h3 {
+
+        i,
+        ai {
             color: $prim5;
         }
     }
-   
+
     button {
         font: inherit;
         background-color: inherit;
         color: $prim1;
         border: 0px;
-        padding: inherit;  
+        padding: inherit;
     }
-    h2, h3 {
-        button, a {
+
+    h2,
+    h3 {
+
+        button,
+        a {
             color: inherit;
             text-decoration: none;
+
             &:hover {
                 color: $prim5;
             }
         }
     }
+
     .dropdown {
         width: 100%;
         display: none;
     }
+
     .dropdown-cuurent {
         width: 100%;
         display: block;
     }
+
     .primary-sidebar-menu {
         padding: 0rem .4rem 0rem .4rem;
     }
+
     .primary-sidebar-premenu {
         display: none;
+
         h2 {
             font-size: $ftsz2;
         }
+
         @media #{$small-low} {
             display: block;
         }
     }
+
     #current {
         color: $prim5;
+
         &:after {
             font-family: "Font Awesome 5 Free";
             content: "\f0a5";
             padding-left: .8rem;
         }
     }
+
     #current-dropdown {
         color: $prim5;
+
         &:after {
             font-family: "Font Awesome 5 Free";
             content: "\f0a7";
@@ -113,6 +141,3 @@
         }
     }
 }
-
-
-
