--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,10 +1,12 @@
 {{ define "main" }}
 
-  <div class="article-meta">
-     <h1 id="title"> <i class='far fa-angry'></i> Error 404 <i class='far fa-angry'></i> </h1>
+<div class="article-meta">
+  <h1 id="title">Error 404</h1>
 
-    <h2> Sorry but the page you're looking for does not exist!</h2>
-  </div>
+  <h2> The page you're looking for does not exist!</h2>
+
+  <h2><i class='far fa-angry'></i><i class='far fa-angry'></i><i class='far fa-angry'></i></h2>
+</div>
 
 
 {{ end }}
