.Site.IsServer is deprecated

--- a/assets/scss/libs/main-content.scss
+++ b/assets/scss/libs/main-content.scss
@@ -59,7 +59,7 @@
         }
 
         ol li::marker {
-            font-family: "AMA";
+            font-family: 'Bangers', cursive;
             font-size: $ftsz7;
             color: $prim3;
         }
