--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -106,7 +106,9 @@ video {
 #title {
     padding: .4rem;
     text-align: center;
-    font-family: "AMA";
+    // font-family: 'Joti One', cursive;
+    // font-family: 'Kranky', cursive;
+    font-family: 'Acme', sans-serif;
     font-size: $ftsz1;
 
     code {
