--- a/assets/scss/libs/fonts.scss
+++ b/assets/scss/libs/fonts.scss
@@ -1,5 +1,5 @@
 // Fira Sans and Fira Code
-@import url('https://fonts.googleapis.com/css?family=Fira+Sans:200,200i 300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap');
 @import url('https://cdn.jsdelivr.net/gh/tonsky/FiraCode@1.206/distr/fira_code.css');
 
 // Font Awesome 
@@ -8,12 +8,18 @@
 // Academicons 
 @import url('https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css');
 
+// Bangers 
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Joti+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ranchers&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kranky&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
+
 // Extra 
 // https://www.dafont.com/fr/avengeance-mightiest-avenger.font
 @font-face {
     font-family: 'AMA';
     src: url('/fonts/AVENGEANCE_MIGHTIEST_AVENGER.eot') format('embedded-opentype'),
-      url('/fonts/AVENGEANCE_MIGHTIEST_AVENGER.woff2') format('woff2'),
       url('/fonts/AVENGEANCE_MIGHTIEST_AVENGER.woff') format('woff'),
       url('/fonts/AVENGEANCE_MIGHTIEST_AVENGER.ttf') format('truetype')
 }
