--- a/assets/scss/libs/sidebar-primary.scss
+++ b/assets/scss/libs/sidebar-primary.scss
@@ -45,9 +45,10 @@
     }
 
     h1 {
-        font-family: "AMA";
+        font-family: 'Bangers', cursive;
         margin-bottom: 1.2rem;
         padding-top: .4rem;
+        //letter-spacing: 0.1em;
     }
 
     h2 {
